Fix hero-body's vertical alignment

--- a/sass/components/_carousel.sass
+++ b/sass/components/_carousel.sass
@@ -10,3 +10,7 @@
   margin-right: 10px
   border-radius: 5px
   min-height: 100%
+  @media screen and (max-width: $desktop - 1)
+    .hero-body
+      flex-grow: 0
+      margin: auto
